# trying-flecs

./: README.md  compile_and_run.sh  main.c  meson.build
